--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@ body {
 
 body {
   background-color: #000000;
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg %3E%3Cpolygon fill='%23060301' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%230c0601' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23120902' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%23190b02' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%231f0e03' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%23251103' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%232B1404' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='100%25' height='100%25' viewBox='0 0 1600 800'%3E%3Cg fill-opacity='0.81'%3E%3Cpolygon fill='%230b0601' points='800 100 0 200 0 800 1600 800 1600 200'/%3E%3Cpolygon fill='%23150d02' points='800 200 0 400 0 800 1600 800 1600 400'/%3E%3Cpolygon fill='%23201303' points='800 300 0 600 0 800 1600 800 1600 600'/%3E%3Cpolygon fill='%232a1a03' points='1600 800 800 400 0 800'/%3E%3Cpolygon fill='%23352004' points='1280 800 800 500 320 800'/%3E%3Cpolygon fill='%233f2705' points='533.3 800 1066.7 800 800 600'/%3E%3Cpolygon fill='%234A2D06' points='684.1 800 914.3 800 800 700'/%3E%3C/g%3E%3C/svg%3E");
   background-attachment: fixed;
   background-size: cover;
 }
